src/test/deca/context/invalid/resultats/test6_op_bool5-ima.res
  IMA -- Fichier ./src/test/deca/context/invalid/test6_op_bool5.ass introuvable
